-
Bug
-
Resolution: Done
-
P0: Blocker
-
Qt Creator 4.5.0-rc1
-
None
-
Windows 10, QtCreator 4.5.0 and any Boot2Qt 5.10.0 or 5.9.3 toolchain
-
2bc872e6b0bad747212b92ebbf965809797c7ce2
Building existing project (e.g., any example) in Windows with QtCreator 4.5.0 fails with
13:07:30: Running steps for project about-b2qt... 13:07:30: Starting: "C:\work\Qt\5.10.0\Boot2Qt\jetson-tx1\toolchain\sysroots\i686-pokysdk-mingw32\usr\bin\qmake.exe" C:\work\Qt\Examples\B2Qt-5.10.0\basicsuite\about-b2qt\about-b2qt.pro -spec devices\linux-oe-generic-g++ "CONFIG+=debug" "CONFIG+=qml_debug" 13:07:31: The process "C:\work\Qt\5.10.0\Boot2Qt\jetson-tx1\toolchain\sysroots\i686-pokysdk-mingw32\usr\bin\qmake.exe" exited normally. 13:07:31: Could not start process "make" qmake_all Error while building/deploying project about-b2qt (kit: Boot2Qt 5.10.0 NVIDIA Jetson TX1) When executing step "qmake" 13:07:31: Elapsed time: 00:00.
On the other hand, if you create new project, make is correctly found and builds succeed.
Build settings for existing projects shows
Make: make not found in the environment.
and for new new projects
Make: make.exe in C:\work\Qt\build\build-untitled-qq-scroll-Boot2Qt_5_10_0_NVIDIA_Jetson_TX1-Debug
For Gerrit Dashboard: QTCREATORBUG-19371 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
212703,7 | BuildConfiguration: Fix caching of environment | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |