src/plugins/genericprojectmanager/genericbuildconfiguration.cpp
@@ -56,16 +56,21 @@ const char GENERIC_BC_ID[] = "GenericProjectManager.GenericBuildConfiguration";
 
 GenericBuildConfiguration::GenericBuildConfiguration(Target *parent)
     : BuildConfiguration(parent, Core::Id(GENERIC_BC_ID))
-{ }
+{
+    updateCacheAndEmitEnvironmentChanged();
+}
 
 GenericBuildConfiguration::GenericBuildConfiguration(Target *parent, Core::Id id)
     : BuildConfiguration(parent, id)
-{ }
+{
+    updateCacheAndEmitEnvironmentChanged();
+}
 
 GenericBuildConfiguration::GenericBuildConfiguration(Target *parent, GenericBuildConfiguration *source) :
     BuildConfiguration(parent, source)
 {
     cloneSteps(source);
+    updateCacheAndEmitEnvironmentChanged();
 }
 
 NamedWidget *GenericBuildConfiguration::createConfigWidget()
